# lead-enrichment

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  NOTES.md  Procfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
docs/: equipment_group.json  equipment_type.json
notebooks/: import_leads_shared.ipynb
src/: main.py
src/common/: config.py  logging.py  openai_errors.py
src/custom_agents/: company_match.py  company_research.py
src/enrichments/: base_features.py
src/enrichments/cargo/: enricher.py  features.py  schemas.py
src/enrichments/cargo/agents/: cargo_extraction.py
src/enrichments/company/: enrich.py  enricher.py  features.py  orbis_match.py  research.py  schemas.py  utils.py
src/enrichments/company/agents/: company_match.py  company_research.py
src/enrichments/lead/: enricher.py  features.py  geography.py  schemas.py
src/enrichments/user/: TOOD.md
src/models/: cargo.py  company.py  enrichment.py  features.py  lead.py
src/pipeline/: orchestrator.py
src/pipelines/: __init__.py  company_enrichment.py  custom_enrichment.py  lead_enrichment.py  user_validation.py
src/routes/: __init__.py  enrichment.py  health.py  scrape.py  service_bus.py
src/scripts/: dev.py  prod.py
src/services/: azure_openai_service.py  crm_service.py  orbis_service.py  web_scrape_service.py  web_search_service.py
src/services/bigquery/: client.py  schemas.py
src/services/google_search/: client.py  schemas.py  tools.py
src/services/orbis/: client.py  schemas.py  tools.py
src/services/segment/: client.py  schemas.py
src/services/serper_search/: client.py  schemas.py  tools.py
src/services/service_bus/: client.py  mock_event_service.py
src/services/web_scrape/: client.py  schemas.py  tools.py
src/services/web_scraper/: client.py  html_extractor.py  schemas.py  tools.py
src/tools/: match_company.py  scrape_website.py  search_web.py  web_searcher.py  website_scraper.py
tests/: test_azure_openai_service.py
tests/enrichments/company/: test_features.py
tests/enrichments/lead/: test_features.py
tests/fixtures/company/: company_enrichment_result.py
tests/services/service_bus/: test_client.py
